$Id$

	WARNING, NOT FULLY TESTED YET ON 64 BIT PLATFORMS!

v0.81.2		14-Oct-2005.

	mbcico:
		Some time_t/int conversions.

	mbfido:
		Some time_t/int conversions.


v0.81.1		09-Oct-2005 - 14-Oct-2005

	general:
		Made changes to structures and sources to make everything
		compatible between 32 and 64 bit systems.


v0.81.0		07-Oct-2005 - 09-Oct-2005

	upgrade:
		The bbs menu Change Screenlength is obsolete. Remove this from
		the menus (setup.mnu) and ascii/ansi screens (setup.a??).

	libmbse.a:
		In nodelock show program name if node is already locked.

	mbcico:
		Made binkp GZ and BZ2 compression final.

	mbsebbs:
		Automatic dynamic detection of the users screensize.
		There is no check anymore for a valid tty with network calls,
		instead a fake ttyinfo record is created. Modem/ISDN and
		console still need a valid configured tty.
		Fixed a bug in the email menu that would let the current
		mailbox disappear.
		Fixed the internal fullscreen editor.

	mbnewusr:
                There is no check anymore for a valid tty with network calls,
                instead a fake ttyinfo record is created. Modem/ISDN and
                console still need a valid configured tty.

	mbtask:
		Logs program name that locks serial ports.

	mbsetup:
		Removed settings for users screenlength.
		In tty setup the network records are automatic removed. The
		setting for auth log is removed (was never used).

	lang:	Removed prompts 64, 80 and 81.
		Changed prompt 348.
		Added prompt 31.

	examples:
		removed Change Screenlength from the English menus and 
		txtfiles.


v0.80.0		27-Oct-2004 - 06-Oct-2005


		Yes, this release took too long to complete. But there were too
		many problems that a stable release wasn't a good idea.

        general:
                Due to lack of maintainers italian language support is dropped.
                Upgraded to ftscprod.010
                Added port to OpenBSD, is under test (and doesn't work yet).